--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ packages = [{include = "cyclerack_map"}]
 [tool.poetry.dependencies]
 python = "^3.11"
 django = "^4.1.7"
+psycopg2 = "^2.9.5"
+python-dotenv = "^0.21.1"
 
 
 [build-system]
